# arimagba

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README  README.md
files/: arm-MGBA.gba  source.txt
gba-emulator/: .gitignore  bios.cpp  bios.hpp  build.sh  gamepak.cpp  gamepak.hpp  gba-emulator.cpp  gba-emulator.h
gba-emulator/cpu/: arm7tdmi.cpp  arm7tdmi.hpp
gba-emulator/cpu/components/: alu.cpp  alu.hpp  barrel_shifter.cpp
gba-emulator/cpu/op/: block_data_transfer.cpp  block_data_transfer.hpp  branch.cpp  branch.hpp  branch_and_exchange.cpp  branch_and_exchange.hpp  data_processing.cpp  data_processing.hpp  halfword_data_transfer.cpp  halfword_data_transfer.hpp  halfword_data_transfer_offset.hpp  halfword_data_transfer_register.cpp  halfword_data_transfer_register.hpp  multiply_accumulate.cpp  multiply_accumulate.hpp  multiply_accumulate_long.cpp  multiply_accumulate_long.hpp  opcode.cpp  opcode.hpp  psr_transfer_mrs.cpp  psr_transfer_mrs.hpp  psr_transfer_msr.cpp  psr_transfer_msr.hpp  psr_transfer_msr_flag_bits.cpp  psr_transfer_msr_flag_bits.hpp  psr_transfer_msr_full.cpp  psr_transfer_msr_full.hpp  single_data_swap.hpp  single_data_transfer.cpp  single_data_transfer.hpp  software_interrupt.cpp  software_interrupt.hpp  undefined.hpp
gba-emulator/cpu/op/arm/: block_data_transfer.cpp  block_data_transfer.hpp  branch.cpp  branch.hpp  branch_and_exchange.cpp  branch_and_exchange.hpp  data_processing.cpp  data_processing.hpp  halfword_data_transfer.cpp  halfword_data_transfer.hpp  halfword_data_transfer_offset.cpp  halfword_data_transfer_offset.hpp  halfword_data_transfer_register.cpp  halfword_data_transfer_register.hpp  multiply_accumulate.cpp  multiply_accumulate.hpp  multiply_accumulate_long.cpp  multiply_accumulate_long.hpp  psr_transfer_mrs.cpp  psr_transfer_mrs.hpp  psr_transfer_msr.cpp  psr_transfer_msr.hpp  psr_transfer_msr_flag_bits.cpp  psr_transfer_msr_flag_bits.hpp  psr_transfer_msr_full.cpp  psr_transfer_msr_full.hpp  single_data_swap.cpp  single_data_swap.hpp  single_data_transfer.cpp  single_data_transfer.hpp  software_interrupt.cpp  software_interrupt.hpp  undefined.cpp  undefined.hpp
gba-emulator/cpu/op/fields/: imm.cpp  imm.hpp  operand.cpp  operand.hpp  rm.cpp  rm.hpp  rotate_imm.cpp  rotate_imm.hpp  shift_rm.cpp  shift_rm.hpp
gba-emulator/cpu/op/thumb/: add_offset_sp.cpp  add_offset_sp.hpp  add_subtract.cpp  conditional_branch.cpp  conditional_branch.hpp  hi_register_branch_exchange.hpp  load_address.hpp  load_store_halfword.hpp  load_store_imm_offset.cpp  load_store_register_offset.hpp  load_store_sign_extended.hpp  long_branch_with_link.hpp  move_comp_add_sub_imm.cpp  move_comp_add_sub_imm.hpp  move_shifted_register.cpp  multiple_load_store.cpp  software_interrupt.cpp  software_interrupt.hpp  thumb_opcode.hpp  unconditional_branch.cpp
gba-emulator/cpu/registers/: cpsr.cpp  cpsr.hpp
gba-emulator/graphics/: ppu.cpp  ppu.hpp
gba-emulator/memory/: gamepak.cpp  gamepak.hpp  io_registers.cpp  io_registers.hpp  memory_manager.cpp  memory_manager.hpp  vram.cpp
gba-emulator/src/: gba-emulator.cpp
gba-emulator/src/cpu/: arm7tdmi.hpp
gba-emulator/src/cpu/op/: opcode.cpp
gba-emulator/src/graphics/: ppu.hpp
gba-emulator/src/memory/: bios.cpp  gamepak.cpp  vram.hpp  wram.cpp
gba-emulator/src/utils/: utils.cpp
gba-emulator/utils/: utils.cpp  utils.hpp
src/: gba-emulator.cpp
src/cpu/: arm7tdmi.cpp  arm7tdmi.hpp
src/cpu/components/: alu.cpp  alu.hpp  barrel_shifter.cpp  barrel_shifter.hpp  exception_handler.cpp  exception_handler.hpp
src/cpu/op/: arm_pool.cpp  arm_pool.hpp  opcode.cpp  opcode.hpp  thumb_pool.cpp  thumb_pool.hpp
src/cpu/registers/: cpsr.cpp  cpsr.hpp
src/graphics/: ppu.cpp  ppu.hpp  renderer.cpp  renderer.hpp  screen_entry.cpp  screen_entry.hpp  ui.cpp  ui.hpp
src/memory/: bios.cpp  bios.hpp  dma.hpp  ewram.cpp  ewram.hpp  gamepak.cpp  gamepak.hpp  generic_memory.cpp  generic_memory.hpp  io_registers.cpp  io_registers.hpp  iwram.cpp  iwram.hpp  keys.cpp  keys.hpp  memory_manager.cpp  memory_manager.hpp  oam.cpp  oam.hpp  palette_ram.cpp  palette_ram.hpp  sram.cpp  sram.hpp  vram.cpp  vram.hpp  wram.cpp  wram.hpp
src/memory/persistent/: eeprom.cpp  eeprom.hpp
src/utils/: utils.cpp  utils.hpp
(+107 files in other folders)
